<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/graysBackground"
    tools:context=".NuevoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@color/grays"
        android:textSize="15sp"
        android:layout_margin="10sp"
        android:text="@string/txt_menu_nuevo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="12dp"
        android:padding="15sp"
        android:background="@drawable/shape_list">


        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="15sp"
            android:inputType="textPersonName"
            android:hint="@string/hint_nombre" />
        <EditText
            android:id="@+id/txtNumDocument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="15sp"
            android:inputType="number"
            android:hint="@string/hint_document" />
        <EditText
            android:id="@+id/txtFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="15sp"
            android:inputType="date"
            android:maxLines="1"
            android:hint="@string/hint_date" />
        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginHorizontal="15sp"
            android:hint="@string/hint_telefono"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginHorizontal="15sp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_correo_electronico"/>
        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_btn"
            android:text="@string/txt_btn_guardar"
            android:layout_gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>