<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graysBackground"
    tools:context=".VerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtTitleActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textColor="@color/grays"
            android:textSize="15sp"
            android:layout_margin="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="12dp"
            android:padding="15sp"
            android:background="@drawable/shape_list">

            <TextView
                android:id="@+id/viewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15sp"
                android:text="@string/hint_nombre"/>
            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginHorizontal="15sp"
                android:labelFor="@+id/viewNombre"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/viewTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15sp"
                android:text="@string/hint_telefono"/>
            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_marginHorizontal="15sp"
                android:labelFor="@+id/viewTelefono"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/viewCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15sp"
                android:text="@string/hint_correo_electronico"/>
            <EditText
                android:id="@+id/txtCorreoElectronico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginHorizontal="15sp"
                android:labelFor="@+id/viewCorreo"
                android:inputType="textEmailAddress"/>
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_btn_guardar"
                android:background="@drawable/shape_btn"
                android:layout_gravity="center"
                android:textSize="24sp"/>

        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="2sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="5sp"
            app:srcCompat="@drawable/outline_edit_24_foreground" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEliminar"
            android:layout_below="@+id/fabEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:clickable="true"
            app:srcCompat="@drawable/outline_delete_24_foreground" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>